syntax = "proto3";

import "common.proto";
import "aelf_options.proto";
import "core.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AElf.Contracts.Consensus.AEDPoS";

service AEDPoSContract {
    option (aelf.csharp_state) = "AElf.Contracts.Consensus.AEDPoS.AEDPoSContractState";
    // Actions
    // -> Process
    rpc InitialAElfConsensusContract (InitialAElfConsensusContractInput) returns (google.protobuf.Empty) {
    }
    rpc FirstRound (Round) returns (google.protobuf.Empty) {
    }
    
    rpc UpdateValue (UpdateValueInput) returns (google.protobuf.Empty) {
    }
    rpc NextRound (Round) returns (google.protobuf.Empty) {
    }
    rpc NextTerm (Round) returns (google.protobuf.Empty) {
    }
    rpc UpdateTinyBlockInformation (TinyBlockInput) returns (google.protobuf.Empty) {
    }
    
    rpc GetLIBOffset (google.protobuf.Empty) returns (SInt64Value) {
    }
    
    rpc UpdateConsensusInformation (ConsensusInformation) returns (google.protobuf.Empty) {
    }

    // Views
    rpc GetConsensusCommand (CommandInput) returns (ConsensusCommand) {
        option (aelf.is_view) = true;
    }
    rpc GetInformationToUpdateConsensus (AElfConsensusTriggerInformation) returns (AElfConsensusHeaderInformation) {
        option (aelf.is_view) = true;
    }
    rpc GenerateConsensusTransactions (AElfConsensusTriggerInformation) returns (TransactionList) {
        option (aelf.is_view) = true;
    }
    rpc ValidateConsensusBeforeExecution (AElfConsensusHeaderInformation) returns (ValidationResult) {
        option (aelf.is_view) = true;
    }
    rpc ValidateConsensusAfterExecution (AElfConsensusHeaderInformation) returns (ValidationResult) {
        option (aelf.is_view) = true;
    }
    
    rpc GetCurrentMinerList (google.protobuf.Empty) returns (MinerList) {
        option (aelf.is_view) = true;
    }
    rpc GetCurrentMinerListWithRoundNumber (google.protobuf.Empty) returns (MinerListWithRoundNumber) {
        option (aelf.is_view) = true;
    }
    rpc GetRoundInformation (SInt64Value) returns (Round) {
        option (aelf.is_view) = true;
    }
    rpc GetCurrentRoundNumber (google.protobuf.Empty) returns (SInt64Value) {
        option (aelf.is_view) = true;
    }
    rpc GetCurrentRoundInformation (google.protobuf.Empty) returns (Round) {
        option (aelf.is_view) = true;
    }
    rpc GetPreviousRoundInformation (google.protobuf.Empty) returns (Round) {
        option (aelf.is_view) = true;
    }
    rpc GetCurrentTermNumber (google.protobuf.Empty) returns (SInt64Value) {
        option (aelf.is_view) = true;
    }
}

// Events
message IrreversibleBlockFound {
    option (aelf.is_event) = true;
    sint64 offset = 1;
}

message InitialAElfConsensusContractInput {
    Hash election_contract_system_name = 1;
    bool is_term_stay_one = 2;
    bool is_side_chain = 3;
    Hash token_contract_system_name = 5;
    Hash vote_contract_system_name = 6;
    sint64 time_each_term = 7;
}

// Just used as parameter of consensus contract method.
message UpdateValueInput {
    Hash OutValue = 1;// Calculated from current in value.
    Hash Signature = 2;// Calculated from current in value and signatures of previous round.
    sint64 RoundId = 3;// To ensure the values to update will be apply to correct round by comparing round id.
    sint32 PromiseTinyBlocks = 4;// This value is 1 by default, except this miner wanna produce tiny blocks in one time slot.
    Hash PreviousInValue = 5;// Publish previous in value for validation previous signature and previous out value.
    google.protobuf.Timestamp ActualMiningTime = 6;
    sint32 SupposedOrderOfNextRound = 7;
    map<string, int32> TuneOrderInformation = 8;
    map<string, bytes> EncryptedInValues = 9;// For others to recover his in value of current round.
    map<string, bytes> DecryptedPreviousInValues = 10;
    sint64 ProducedBlocks = 11;
    map<string, Hash> MinersPreviousInValues = 12;
}

// The miners public key list for each term.
message MinerList {
    repeated bytes PublicKeys = 1;
}

// To query first round number of each term.
message TermNumberLookUp {
    map<sint64, sint64> Map = 1;// Term number -> Round number.
}

// All the candidates.
message Candidates {
    repeated bytes PublicKeys = 1;
}

// The information of a round.
message Round {
    sint64 RoundNumber = 1;
    map<string, MinerInRound> RealTimeMinersInformation = 2;
    sint64 MainChainMinersRoundNumber = 3;
    sint64 BlockchainAge = 4;
    string ExtraBlockProducerOfPreviousRound = 7;
    sint64 TermNumber = 8;
}

// The information of a miner in a specific round.
message MinerInRound {
    sint32 order = 1;
    bool IsExtraBlockProducer = 2;
    Hash InValue = 3;
    Hash OutValue = 4;
    Hash Signature = 5;
    google.protobuf.Timestamp ExpectedMiningTime = 6;
    sint64 ProducedBlocks = 7;
    sint64 MissedTimeSlots = 8;
    string PublicKey = 9;
    sint32 PromisedTinyBlocks = 10;
    Hash PreviousInValue = 12;
    sint32 SupposedOrderOfNextRound = 13;
    sint32 FinalOrderOfNextRound = 14;
    google.protobuf.Timestamp ActualMiningTime = 15;// Miners must fill actual mining time when they do the mining.
    map<string, bytes> EncryptedInValues = 16;
    map<string, bytes> DecryptedPreviousInValues = 17;
    sint32 ProducedTinyBlocks = 18;
}

message AElfConsensusHeaderInformation {
    bytes sender_publicKey = 1;
    Round round = 2;
    AElfConsensusBehaviour behaviour = 3;
}

message AElfConsensusHint {
    AElfConsensusBehaviour behaviour = 1;
}

enum AElfConsensusBehaviour {
    UpdateValue = 0;
    NextRound = 1;
    NextTerm = 2;
    UpdateValueWithoutPreviousInValue = 3;
    Nothing = 4;
    TinyBlock = 5;
}

message AElfConsensusTriggerInformation {
    bytes public_key = 1;// A must-have.
    Hash random_hash = 2;// To calculate In Value.
    Hash previous_random_hash = 3;// Random hash of previous round for validation.
    AElfConsensusBehaviour behaviour = 4;
}

message CommandInput {
    bytes PublicKey = 1;
}

message TermInfo {
    sint64 termNumber = 1;
    sint64 roundNumber = 2;
}

message MinerListWithRoundNumber {
    MinerList MinerList = 1;
    sint64 RoundNumber = 2;
}

message TinyBlockInput {
    sint64 round_id = 1;
    google.protobuf.Timestamp actual_mining_time = 2;
    sint64 produced_blocks = 3;
}

message VoteMinersCountInput {
    sint32 miners_count = 1;
    sint64 amount = 2;
}