syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Tank.Contracts.Vote";

service VoteContract {

    option (aelf.csharp_state) = "Tank.Contracts.Vote.VoteContractState";

    rpc Initialize (InitializeInput) returns (google.protobuf.Empty) { }
    
    
}


message InitializeInput {
    string Value = 1;
}